--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" media="screen" title="no title">
-  <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
+  <link rel="stylesheet" href="css/app.css" media="screen" title="no title">
   <title>YourApp</title>
 </head>
 <body>
@@ -71,7 +71,9 @@
         </div>
       </div>
       <div class="google-plus social-box">
-        <img src="icons/icon-google-plus.svg" alt="" />
+        <div class="circle">
+          <img src="icons/icon-google-plus.svg" alt="" />
+        </div>
         <div class="stats">
           <h2>Google+</h2>
           <p class="g-value">2,530</p>
