--- a/index.html
+++ b/index.html
@@ -10,28 +10,30 @@
 </head>
 <body>
   <header>
-    <h1>YourApp</h1>
+    <div class="appName">
+      <h1>YourApp</h1>
+    </div>
     <div class="notifications">
       <img src="icons/icon-bell.svg" alt="" />
     </div>
     <div class="user">
       <img src="" alt="" />
-      <h3 class="name">Sebastian Lofaro</h3>
+      <p class="name">Sebastian Lofaro</p>
     </div>
   </header>
 
   <nav class="side-nav">
-    <img src="icons/icon-dashboard.svg" alt="" />
-    <img src="icons/icon-members.svg" alt="" />
-    <img src="icons/icon-visits.svg" alt="" />
-    <img src="icons/icon-settings.svg" alt="" />
+    <img class="nav-icon" src="icons/icon-dashboard.svg" alt="" />
+    <img class="nav-icon" src="icons/icon-members.svg" alt="" />
+    <img class="nav-icon" src="icons/icon-visits.svg" alt="" />
+    <img class="nav-icon" src="icons/icon-settings.svg" alt="" />
   </nav>
 
   <div class="dashboard-wrapper">
     <div class="dashboard-top">
-      <h1>Dashboard</h1>
+      <h2>Dashboard</h2>
       <div class="search">
-        <input type="text" name="search" value="">
+        <input type="text" name="search" value="" placeholder="Search">
       </div>
     </div>
 
@@ -39,24 +41,20 @@
       <!-- This is where an alert will go. -->
     </div>
 
-    <div class="l-chart">
+    <div class="chart">
+      <canvas id="line-graph" width="400" height="200"></canvas>
     </div>
-    <div class="b-chart">
+    <div class="chart">
+      <canvas id="bar-graph" width="400" height="200"></canvas>
     </div>
-    <div class="p-chart">
+    <div class="chart">
+      <canvas id="pie-chart" width="400" height="200"></canvas>
     </div>
 
     <section class="social">
       <div class="twitter social-box">
         <div class="bubble">
-          <svg version="1.1" id="twitter-svg" class="social-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          	 viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
-          <path d="M32,3.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6C25.8,0.8,24,0,22.2,0
-          	c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5C10.3,7.8,5.5,5.2,2.2,1.2c-0.6,1-0.9,2.1-0.9,3.3c0,2.3,1.2,4.3,2.9,5.5
-          	c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1
-          	c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,3,10.1,3c12.1,0,18.7-10,18.7-18.7
-          	c0-0.3,0-0.6,0-0.8C30,5.6,31.1,4.4,32,3.1z"/>
-          </svg>
+          <img src="icons/icon-twitter.svg" alt="" />
         </div>
         <div class="stats">
           <h2>Twitter</h2>
@@ -64,14 +62,16 @@
         </div>
       </div>
       <div class="facebook social-box">
-        <img src="icons/icon-facebook.svg" alt="" />
+        <div class="bubble">
+          <img src="icons/icon-facebook.svg" alt="" />
+        </div>
         <div class="stats">
           <h2>Facebook</h2>
           <p class="f-value">8,739</p>
         </div>
       </div>
       <div class="google-plus social-box">
-        <div class="circle">
+        <div class="bubble">
           <img src="icons/icon-google-plus.svg" alt="" />
         </div>
         <div class="stats">
@@ -82,17 +82,81 @@
     </section>
 
     <section class="new-members">
+      <h3>NEW MEMBERS</h3>
       <!-- New members will go here -->
+      <div id="scotty" class="member">
+        <img src="img/scotty.jpg" alt="Photo of Scotty Visser." />
+        <div class="member-info">
+          <p>Scotty Visser</p>
+          <a href="#">scotty.visser@example.com</a>
+        </div>
+      </div>
+
+      <div id="will" class="member">
+        <img src="img/will.jpg" alt="Photo of Will Havens." />
+        <div class="member-info">
+          <p>Will Havens</p>
+          <a href="#">will.havens@example.com</a>
+        </div>
+      </div>
+
+      <div id="tanner" class="member">
+        <img src="img/tanner.jpg" alt="Photo of Tanner Rembolt." />
+        <div class="member-info">
+          <p>Tanner Rembolt</p>
+          <a href="#">tanner.rembolt@example.com</a>
+        </div>
+      </div>
+
+      <div id="chase" class="member">
+        <img src="img/chase.jpg" alt="Photo of Chase Coburn." />
+        <div class="member-info">
+          <p>Chase Coburn</p>
+          <a href="#">chase.coburn@example.com</a>
+        </div>
+      </div>
     </section>
     <section class="recent-activity">
+      <h3>RECENT ACTIVITY</h3>
       <!-- Member activity will go here -->
+      <div id="victoria" class="member">
+        <img src="img/victoria.jpg" alt="Photo of Victoria Monette." />
+        <div class="member-info">
+          <p>Victoria Monette liked a photo</p>
+          <p>5 hours ago</p>
+        </div>
+      </div>
+
+      <div id="erin" class="member">
+        <img src="img/erin.jpg" alt="Photo of Erin Forester." />
+        <div class="member-info">
+          <p>Erin Forester</p>
+          <p>5 hours ago</p>
+        </div>
+      </div>
+
+      <div id="lesley" class="member">
+        <img src="img/lesley.jpg" alt="Photo of Lesley Moses." />
+        <div class="member-info">
+          <p>Lesley Moses</p>
+          <p>5 hours ago</p>
+        </div>
+      </div>
+
+      <div id="vanessa" class="member">
+        <img src="img/vanessa.jpg" alt="Photo of Vanessa Agurie." />
+        <div class="member-info">
+          <p>Vanessa Agurie</p>
+          <p>5 hours ago</p>
+        </div>
+      </div>
     </section>
     <section class="message-user">
       <h3>MESSAGE USER</h3>
       <form class="" action="index.html" method="post">
-        <input type="text" name="userName" value="" placeholder="Search for User">
-        <textarea name="message" rows="8" cols="40" placeholder="Message for User"></textarea>
-        <input type="button" name="send" value="SEND">
+        <input class= "textfield" type="text" name="userName" value="" placeholder="Search for User">
+        <textarea class= "textfield" name="message" rows="8" cols="40" placeholder="Message for User"></textarea>
+        <input class="save" type="button" name="send" value="SEND">
       </form>
     </section>
     <section class="settings">
@@ -116,5 +180,7 @@
       </form>
     </section>
   </div>
+  <script type="text/javascript" src="node_modules/chart.js/dist/Chart.min.js"></script>
+  <script type="text/javascript" src="js/charts.js"></script>
 </body>
 </html>
